syntax = "proto3";

option csharp_namespace = "EncryptionService.Protos";

service EncryptionGrpcService {
  // Шифрование одного сообщения
  rpc Encrypt (EncryptRequest) returns (EncryptResponse);
  
  // Дешифрование одного сообщения
  rpc Decrypt (DecryptRequest) returns (DecryptResponse);
  
  // Пакетное шифрование нескольких сообщений
  rpc EncryptBatch (BatchEncryptRequest) returns (BatchEncryptResponse);
  
  // Пакетное дешифрование нескольких сообщений
  rpc DecryptBatch (BatchDecryptRequest) returns (BatchDecryptResponse);
}

message EncryptRequest {
  string plain_text = 1;
}

message EncryptResponse {
  string cipher_text = 1;
  bool success = 2;
  string error_message = 3;
}

message DecryptRequest {
  string cipher_text = 1;
}

message DecryptResponse {
  string plain_text = 1;
  bool success = 2;
  string error_message = 3;
}

message BatchEncryptRequest {
  repeated string plain_texts = 1;
}

message BatchEncryptResponse {
  repeated string cipher_texts = 1;
  bool success = 2;
  string error_message = 3;
}

message BatchDecryptRequest {
  repeated string cipher_texts = 1;
}

message BatchDecryptResponse {
  repeated string plain_texts = 1;
  bool success = 2;
  string error_message = 3;
}